examples/test/testpolicy13434.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13434
  namespace: namespace143
spec:
  podSelector:
    matchLabels:
      key25: value4
      key18: value24
      key32: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value33
      podSelector:
        matchLabels:
          key7: value21
